<resources>
    <string name="app_name">eShepherd</string>
    <string name="id_ovce">ID ovce</string>
    <string name="vpisite_id_ovce">Vpišite ID ovce</string>
    <string name="trenutna_creda">Trenutna čreda</string>
    <string name="datum_rojstva_format">LLLL-DD-MM</string>
    <string name="datum_rojstva">Datum rojstva</string>
    <string name="pasma">Pasma</string>
    <string name="id_oceta">ID očeta</string>
    <string name="id_mame">ID mame</string>
    <string name="stevilo_sorojencev">Število sorojencev</string>
    <string name="trenutno_stanje">Trenutno stanje</string>
    <string name="opombe">Opombe</string>
    <string name="dodaj_ovco">Dodaj ovco</string>
    <string name="poreklo">Poreklo</string>
    <string name="id_ovna">ID ovna</string>
    <string name="dodaj_ovna">Dodaj ovna</string>
    <string name="dodaj_redo">Dodaj čredo</string>
    <string name="datum_gonitve">Datum gonitve</string>
    <string name="datum_gonitve_format">LLLL-DD-MM</string>
    <string name="datum_kotitve">Datum kotitve</string>
    <string name="datum_kotitve_format">LLLL-DD-MM</string>
    <string name="tevilo_mrtvorojenih">Število mrtvorojenih</string>
    <string name="dodaj_kotitev">Dodaj kotitev</string>
    <string name="id_jagenj_ka">ID jagenjčka</string>
    <string name="spol">Spol</string>
    <string name="dodaj_jagenj_ka">Dodaj jagenjčka</string>
    <string name="vpisite_podatke">VPIŠITE PODATKE</string>
    <string name="dodaj_gonitev">Dodaj gonitev</string>
    <string-array name="spol_array">
        <item>m</item>
        <item>ž</item>
    </string-array>
    <string name="title_activity_show_ovca">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="povprecno_stevilo_jagenjckov">Povprečno število jagenjčkov</string>
    <string name="stevilo_dosedanjih_kotitev">Število dosedanjih kotitev</string>
    <string name="title_activity_show_oven">MainActivity</string>
    <string name="stevilo_mladih">Število mladih</string>
    <string name="predviden_datum_kotitve">Predviden datum kotitve</string>
    <string name="oznaka_crede">Oznaka črede</string>
    <string name="id_jagenjcka">ID jagenjčka</string>
    <string name="shrani">Shrani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>