<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowOvcaActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ovcaIDTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_ovce"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OvcaID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/credaIDTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trenutna_creda"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CredaID"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            />

        <TextView
            android:id="@+id/DatumRojstvaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datum_rojstva"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DatumRojstva"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/PasmaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasma"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Pasma"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/mamaIDTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_mame"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mamaID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/oceIDTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_oceta"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/oceID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/SteviloSorojencevTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stevilo_sorojencev"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SteviloSorojencev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/StanjeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trenutno_stanje"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Stanje"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/OpombeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opombe"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Opombe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/SteviloKotitevTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stevilo_dosedanjih_kotitev"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SteviloKotitev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/PovprecjeJagenjckovTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/povprecno_stevilo_jagenjckov"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PovprecjeJagenjckov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        app:fabCradleMargin="16dp"
        app:fabCradleVerticalOffset="18dp"
        app:fabCradleRoundedCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_nav_menu_ovce"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_icon"
        app:layout_anchor="@id/bottomAppBar"
        android:onClick="editOvca"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
