<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DatumGonitveTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datum_gonitve"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/DatumGonitve"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datum_gonitve"
            android:inputType="date"/>

        <TextView
            android:id="@+id/OvcaIDtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_ovce"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/OvcaID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_ovce"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/OvenIDtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_ovna"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/OvenID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_ovna"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/OpombeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opombe"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/Opombe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/opombe"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addGonitev"
            android:text="@string/dodaj_redo" />
        <TextView
            android:id="@+id/statusGonitev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textSize="8pt"/>
    </LinearLayout>
</ScrollView>